Media section 90%. Still to handle image opening.Singlemoviepage 95%.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <nav class="navmenu">
     <ul class="navmenu__list">
-      <li class="navmenu__list__unique">© - Sym3ioZ Productions</li>
+      <li class="navmenu__list__unique">© - BT Design</li>
       <li class="navmenu__list__unique">12 - 2022</li>
       <li class="navmenu__list__unique">
         Powered by:&nbsp;
