--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -21,10 +21,11 @@ footer {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 5px 0;
+    padding: 2px 0;
     &__unique {
       width: 30%;
       color: $backgroundColor;
+      font-weight: 500;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -38,8 +39,23 @@ footer {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center;
+      a {
+        background-color: $backgroundColorA;
+        border-radius: 20px;
+        width: 25%;
+        padding: 1% 2%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        transition: all 100ms linear;
+        &:hover {
+          cursor: pointer;
+          background-color: $backgroundColor;
+        }
+      }
       img {
-        width: 50%;
+        width: 100%;
       }
     }
   }
