--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -320,8 +320,8 @@
             }
           }
           :hover {
-            -webkit-box-shadow: 0 0 5px 5px $primaryColor;
-            box-shadow: 0 0 5px 5px $primaryColor;
+            -webkit-box-shadow: 0 0 10px 2px $primaryColor;
+            box-shadow: 0 0 10px 2px $primaryColor;
             img {
               -webkit-transform: scale(1.2);
               -ms-transform: scale(1.2);
@@ -332,12 +332,206 @@
         }
       }
     }
-    h5 {
-      color: $primaryColor;
-      font-size: 26px;
-      font-weight: 800;
-      text-align: left;
-      margin-bottom: 10px;
+  }
+
+  &__media {
+    width: 100%;
+    padding: 0 15px;
+    margin: 25px 0;
+    display: flex;
+    flex-direction: column;
+    &__block {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 22%;
+      &__tabsBlock {
+        width: 100%;
+        display: flex;
+        height: 2em;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: $primaryColor;
+        &__tab {
+          width: 25%;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          height: 100%;
+          color: $backgroundColor;
+          border: solid 2px $primaryColor;
+          font-size: 20px;
+          font-weight: 400;
+          transition: all 70ms linear;
+          &:hover {
+            cursor: pointer;
+            background-color: $backgroundColor;
+            color: $primaryColor;
+          }
+          &__active {
+            width: 50%;
+            font-size: 24px;
+            font-weight: 600;
+            background-color: $backgroundColor;
+            color: $primaryColor;
+          }
+        }
+      }
+      &__content {
+        width: 100%;
+        position: relative;
+        &__trailer {
+          width: 50%;
+          height: 0;
+          padding-bottom: 25%;
+          border: solid 3px $primaryColor;
+          overflow: hidden;
+          position: absolute;
+          z-index: 1;
+          left: 0;
+          transition: all 70ms 50ms linear;
+          iframe {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          &__inactive {
+            filter: blur(10px);
+            z-index: -2;
+            padding-bottom: 24%;
+          }
+        }
+        &__posters {
+          width: 50%;
+          height: 0;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: flex-start;
+          flex-wrap: wrap;
+          padding-bottom: 25%;
+          overflow: hidden;
+          overflow-y: scroll;
+          // Firefox custom scrollbar
+          scrollbar-width: thin;
+          scrollbar-color: $primaryColor $backgroundColor;
+          // Webkit custom scrollbar
+          &::-webkit-scrollbar {
+            width: 15px;
+          }
+          &::-webkit-scrollbar-track {
+            background: $backgroundColor;
+          }
+          &::-webkit-scrollbar-thumb {
+            background-color: $backgroundColor;
+            border: 3px solid $primaryColor;
+            -webkit-box-shadow: inset 0 0 5px $primaryColor;
+            box-shadow: inset 0 0 5px $primaryColor;
+          }
+          position: absolute;
+          left: 25%;
+          z-index: 1;
+          border: solid 3px $primaryColor;
+          background-color: $backgroundColor;
+          transition: all 70ms 50ms linear;
+          &__inactive {
+            filter: blur(10px);
+            z-index: -1;
+            padding-bottom: 24%;
+          }
+          &__unique {
+            width: 30%;
+            margin: 10px;
+            border: solid 2px $primaryColor;
+            overflow: hidden;
+            transition: box-shadow 100ms ease-in-out;
+            &:hover {
+              cursor: pointer;
+              box-shadow: 0px 0px 10px 2px $primaryColor;
+              img {
+                transform: scale(1.2);
+              }
+            }
+            img {
+              width: 100%;
+              transform: scale(1);
+              transform-origin: top;
+              transition: all 400ms ease-in-out;
+            }
+          }
+        }
+        &__wallpapers {
+          width: 50%;
+          height: 0;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: flex-start;
+          flex-wrap: wrap;
+          padding-bottom: 25%;
+          overflow: hidden;
+          overflow-y: scroll;
+          // Firefox custom scrollbar
+          scrollbar-width: thin;
+          scrollbar-color: $primaryColor $backgroundColor;
+          // Webkit custom scrollbar
+          &::-webkit-scrollbar {
+            width: 15px;
+          }
+          &::-webkit-scrollbar-track {
+            background: $backgroundColor;
+          }
+          &::-webkit-scrollbar-thumb {
+            background-color: $backgroundColor;
+            border: 3px solid $primaryColor;
+            -webkit-box-shadow: inset 0 0 5px $primaryColor;
+            box-shadow: inset 0 0 5px $primaryColor;
+          }
+          position: absolute;
+          right: 0;
+          z-index: 1;
+          border: solid 3px $primaryColor;
+          background-color: $backgroundColor;
+          transition: all 70ms 50ms linear;
+          &__inactive {
+            filter: blur(10px);
+            z-index: -2;
+            padding-bottom: 24%;
+          }
+          &__unique {
+            width: 30%;
+            margin: 10px;
+            border: solid 2px $primaryColor;
+            overflow: hidden;
+            transition: box-shadow 100ms ease-in-out;
+            &:hover {
+              cursor: pointer;
+              box-shadow: 0px 0px 10px 2px $primaryColor;
+              img {
+                transform: scale(1.2);
+              }
+            }
+            img {
+              width: 100%;
+              transform: scale(1);
+              transform-origin: top;
+              transition: all 400ms ease-in-out;
+            }
+          }
+        }
+      }
     }
   }
+}
+
+h5 {
+  color: $primaryColor;
+  font-size: 26px;
+  font-weight: 800;
+  text-align: left;
+  margin-bottom: 10px;
+  text-decoration: underline;
 }
