--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -381,6 +381,47 @@
       &__content {
         width: 100%;
         position: relative;
+        // If no video is available, displays a message and a youtube search link
+        span {
+          color: $primaryColor;
+          position: absolute;
+          top: 5%;
+          left: 5%;
+          font-size: 18px;
+          font-weight: 400;
+        }
+        p {
+          color: $primaryColor;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 12%;
+          left: 5%;
+          font-size: 18px;
+          font-weight: 400;
+          a {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 400;
+            color: white;
+            transform: scale(1);
+            transition: all 100ms linear;
+            &:hover {
+              transform: scale(1.1);
+            }
+            i {
+              color: red;
+              font-size: 22px;
+            }
+          }
+        }
+
         &__trailer {
           width: 50%;
           height: 0;
@@ -391,6 +432,7 @@
           z-index: 1;
           left: 0;
           transition: all 70ms 50ms linear;
+          background-color: $backgroundColor;
           iframe {
             width: 100%;
             height: 100%;
@@ -409,7 +451,7 @@
           height: 0;
           display: flex;
           flex-direction: row;
-          justify-content: space-between;
+          justify-content: center;
           align-items: flex-start;
           flex-wrap: wrap;
           padding-bottom: 25%;
@@ -468,7 +510,7 @@
           height: 0;
           display: flex;
           flex-direction: row;
-          justify-content: space-between;
+          justify-content: center;
           align-items: flex-start;
           flex-wrap: wrap;
           padding-bottom: 25%;
