--- a/src/app/view-image/view-image.component.html
+++ b/src/app/view-image/view-image.component.html
@@ -1,1 +1,15 @@
-<p style="color: red">view-image works!</p>
+<div class="fullImage">
+  <div class="fullImage__buttons" *ngIf="uniqueMovie$ | async as movie">
+    <button class="fullImage__buttons__unique" (click)="downloadPoster()">
+      <i class="fa-solid fa-file-arrow-down"></i>Télécharger
+    </button>
+    <button
+      class="fullImage__buttons__unique"
+      [routerLink]="'/singlemovie/' + movie.id"
+    >
+      <i class="fa-solid fa-circle-left"></i>Retour
+    </button>
+  </div>
+
+  <img class="fullImage__display" [src]="posterUrl + imageUrl" />
+</div>
