Homepage 90%.Slight adjusts.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,3 +2,5 @@ $backgroundColor: rgb(20, 20, 20);
 $backgroundColorA: rgba(20, 20, 20, 0.66);
 $primaryColor: #ffd335;
 $secondaryColor: #ff4500;
+
+$lineHeight: 1.25em;
