--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -41,7 +41,7 @@
     }
   }
   &__welcomeMessage {
-    width: 75%;
+    width: 90%;
     margin-bottom: 25px;
     p {
       width: 100%;
@@ -83,6 +83,80 @@
       font-size: 40px;
       font-family: "Bungee", cursive;
       border-bottom: 2px solid $primaryColor;
+    }
+    &__content {
+      width: 100%;
+      margin: 15px 0 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: $primaryColor;
+      &__bar {
+        width: 100%;
+        height: 1em;
+        background-color: $backgroundColor;
+        margin: 5px 0 0 0;
+        &:last-child {
+          margin: 0 0 5px 0;
+        }
+      }
+      &__list {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        &__unique {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 10%;
+          border-right: solid 1em $backgroundColor;
+          border-left: solid 1em $backgroundColor;
+          position: relative;
+          &:hover {
+            cursor: pointer;
+            img {
+              transform: scale(1.25);
+            }
+            p {
+              text-shadow: 0 0 10px $primaryColor;
+            }
+          }
+          &__poster {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            overflow: hidden;
+
+            &__image {
+              width: 100%;
+              transform: scale(1.01);
+              transform-origin: top;
+              transition: all 400ms ease-in-out;
+            }
+          }
+          &__name {
+            position: absolute;
+            bottom: -5em;
+            color: $primaryColor;
+            font-size: 18px;
+            text-align: justify;
+            margin: 0 auto;
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            line-clamp: 3;
+            -webkit-box-orient: vertical;
+          }
+        }
+      }
     }
   }
 }
