--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   font-family: "Sono", monospace;
   margin: 0;
-  line-height: 1.25em;
+  line-height: $lineHeight;
 }
 
 body {
