--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -146,7 +146,7 @@
             }
             p {
               text-shadow: 0 0 25px $primaryColor;
-              opacity: 1;
+              color: $primaryColor;
             }
           }
           i {
@@ -163,11 +163,10 @@
             text-align: center;
             font-size: 20px;
             font-weight: 600;
-            color: $primaryColor;
-            opacity: 0;
-            -webkit-transition: all 200ms 150ms linear;
-            -o-transition: all 200ms 150ms linear;
-            transition: all 200ms 150ms linear;
+            color: $backgroundColor;
+            -webkit-transition: all 150ms linear;
+            -o-transition: all 150ms linear;
+            transition: all 150ms linear;
           }
         }
       }
