--- a/src/app/single-people/single-people.component.scss
+++ b/src/app/single-people/single-people.component.scss
@@ -1,7 +1,45 @@
 @import "../../variables";
 
-p {
-  margin-top: 150px;
-  font-size: 60px;
-  color: $primaryColor;
+.singlePeople {
+  padding: 150px 0;
+  width: 100%;
+  &__block {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &__name {
+      color: $primaryColor;
+      font-size: 80px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    &__card {
+      width: 95%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+      &__profile {
+        width: 30%;
+        & img {
+          width: 100%;
+        }
+      }
+      &__description {
+        width: 68%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        p {
+          color: $primaryColor;
+          font-size: 22px;
+          font-weight: 700;
+          text-align: justify;
+        }
+      }
+    }
+  }
 }
