Landingpage, Homepage, SingleMovie and SinglePeople pages: 100%. Started Searchpage.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,27 +15,15 @@
       <li class="navmenu__list__unique" (click)="onHomePage()">
         <i class="fa-solid fa-ticket"></i>ACCUEIL
       </li>
-      <li class="navmenu__list__unique">
-        <i class="fa-solid fa-ticket"></i>FILMS
-      </li>
-      <li class="navmenu__list__unique">
-        <i class="fa-solid fa-ticket"></i>CONTACT
-      </li>
-      <li class="navmenu__list__unique" (click)="onDiscover()">
+      <li class="navmenu__list__unique__big" (click)="onDiscover()">
         <i class="fa-solid fa-circle-question"></i>
       </li>
+      <li class="navmenu__list__unique__big">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </li>
+      <li class="navmenu__list__unique">
+        <i class="fa-solid fa-envelope"></i>CONTACT
+      </li>
     </ul>
-    <!-- Search module -->
-    <div class="navmenu__searchbar">
-      <i class="fa-solid fa-magnifying-glass"></i>
-      <textarea
-        class="navmenu__searchbar__text"
-        id="searchbar"
-        name="searchbar"
-        placeholder="Rechercher un film"
-        cols="25"
-        rows="1"
-      ></textarea>
-    </div>
   </nav>
 </header>
