--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -59,7 +59,7 @@ header {
     -ms-flex-align: center;
     align-items: center;
     &__list {
-      width: 60%;
+      width: 100%;
       color: $primaryColor;
       font-size: 24px;
       display: -webkit-box;
@@ -88,94 +88,80 @@ header {
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
-        width: 30%;
         -webkit-transform: scale(1);
         -ms-transform: scale(1);
         transform: scale(1);
         -webkit-transition: all 150ms ease-out;
         -o-transition: all 150ms ease-out;
         transition: all 150ms ease-out;
-        & i {
+        i {
           font-size: 20px;
           margin-right: 10px;
         }
-        &:last-child {
+        &__big {
+          transition: all 150ms ease-out;
           i {
-            font-size: 42px;
+            font-size: 36px;
+            margin-right: 10px;
+          }
+          &:hover {
+            cursor: pointer;
+            text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
+            transform: scale(1.1);
+            i {
+              transform: scale(1.1);
+            }
+            &::before {
+              opacity: 1;
+            }
+          }
+          &::before {
+            pointer-events: none;
+            content: "";
+            position: absolute;
+            top: 120%;
+            left: 0;
+            width: 100%;
+            height: 40%;
+            transition: all 75ms linear;
+            opacity: 0;
+            background: linear-gradient(
+              0deg,
+              $primaryColor 50%,
+              $secondaryColor 100%
+            );
+            transform: perspective(2em) rotateX(40deg) scale(0.7, 0.4);
+            filter: blur(1.5em);
           }
         }
         &:hover {
           cursor: pointer;
-          text-shadow: $primaryColor 0 0 15px;
-          -webkit-transform: scale(1.15);
-          -ms-transform: scale(1.15);
-          transform: scale(1.15);
+          text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
+          transform: scale(1.1);
+          i {
+            transform: scale(1.1);
+          }
+          &::before {
+            opacity: 1;
+          }
         }
-      }
-    }
-    &__searchbar {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      margin-right: 10px;
-      i {
-        font-size: 26px;
-        margin-right: 15px;
-        color: $primaryColor;
-        -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-        transform: scale(1);
-        -webkit-transition: all 150ms ease-out;
-        -o-transition: all 150ms ease-out;
-        transition: all 150ms ease-out;
-        cursor: pointer;
-        &:hover {
-          -webkit-transform: scale(1.15);
-          -ms-transform: scale(1.15);
-          transform: scale(1.15);
-          text-shadow: $primaryColor 0 0 15px;
-        }
-      }
-      &__text {
-        resize: none;
-        outline: none;
-        border: 2px solid $primaryColor;
-        border-radius: 20px;
-        background-color: transparent;
-        padding: 3px 0 3px 10px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        font-size: 24px;
-        color: $primaryColor;
-        -webkit-box-shadow: 0px 0px 0px 0px rgba(255, 211, 53, 1);
-        box-shadow: 0px 0px 0px 0px rgba(255, 211, 53, 1);
-        -webkit-transition: all 200ms ease-out;
-        -o-transition: all 200ms ease-out;
-        transition: all 200ms ease-out;
-        &:focus {
-          -webkit-box-shadow: 0px 0px 10px 2px rgba(255, 211, 53, 1);
-          box-shadow: 0px 0px 10px 2px rgba(255, 211, 53, 1);
+        &::before {
+          pointer-events: none;
+          content: "";
+          position: absolute;
+          top: 120%;
+          left: 0;
+          width: 100%;
+          height: 40%;
+          transition: all 75ms linear;
+          opacity: 0;
+          background: linear-gradient(
+            0deg,
+            $primaryColor 50%,
+            $secondaryColor 100%
+          );
+          transform: perspective(2em) rotateX(40deg) scale(0.7, 0.4);
+          filter: blur(1.5em);
         }
       }
     }
