--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -57,6 +57,59 @@
       -ms-transform: translateY(10px);
       transform: translateY(10px);
     }
+    &__links {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 5em;
+      margin-top: 30px;
+      margin-bottom: 50px;
+      &__unique {
+        i {
+          font-size: 48px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          transform: scale(1);
+          transition: all 150ms ease-out;
+
+          p {
+            margin-top: 10px;
+            font-size: 22px;
+            color: $primaryColor;
+          }
+        }
+        &:hover {
+          cursor: pointer;
+          text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
+          transform: scale(1.1);
+          i {
+            transform: scale(1.1);
+          }
+          &::before {
+            opacity: 1;
+          }
+        }
+        &::before {
+          pointer-events: none;
+          content: "";
+          position: absolute;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          height: 40%;
+          transition: all 75ms linear;
+          opacity: 0;
+          background: linear-gradient(
+            0deg,
+            $primaryColor 50%,
+            $secondaryColor 100%
+          );
+          transform: perspective(2em) rotateX(40deg) scale(0.7, 0.4);
+          filter: blur(1.5em);
+        }
+      }
+    }
   }
   &__trending {
     width: 95%;
