--- a/src/app/single-people/single-people.component.scss
+++ b/src/app/single-people/single-people.component.scss
@@ -13,7 +13,7 @@
       color: $primaryColor;
       font-size: 80px;
       text-align: center;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
     &__card {
       width: 95%;
@@ -25,6 +25,9 @@
         width: 30%;
         & img {
           width: 100%;
+        }
+        p {
+          color: $primaryColor;
         }
       }
       &__description {
@@ -38,6 +41,118 @@
           font-size: 22px;
           font-weight: 700;
           text-align: justify;
+        }
+        &__bio {
+          text-indent: 5em;
+          margin-bottom: 50px;
+          color: white !important;
+        }
+        &__movies {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-around;
+          align-items: flex-start;
+          margin: 30px 0;
+          &__unique {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 15%;
+            &__poster {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              width: 100%;
+              overflow: hidden;
+              transition: all 100ms ease-in-out;
+              border: solid 2px $primaryColor;
+              &:hover {
+                cursor: pointer;
+                box-shadow: 0 0 10px 2px $primaryColor;
+                img {
+                  transform: scale(1.25);
+                }
+              }
+              img {
+                width: 100%;
+                transform: scale(1.01);
+                transform-origin: top;
+                transition: all 400ms ease-in-out;
+              }
+            }
+          }
+        }
+      }
+    }
+    &__images {
+      margin-top: 25px;
+      padding-top: 25px;
+      border-top: 5px dashed $primaryColor;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 95%;
+      p {
+        text-align: left;
+        color: $primaryColor;
+        font-size: 22px;
+        font-weight: 700;
+      }
+      &__gallery {
+        display: flex;
+        flex-direction: row;
+
+        width: 100%;
+        height: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        padding-bottom: 25%;
+        overflow: hidden;
+        overflow-y: scroll;
+        // Firefox custom scrollbar
+        scrollbar-width: thin;
+        scrollbar-color: $primaryColor $backgroundColor;
+        // Webkit custom scrollbar
+        &::-webkit-scrollbar {
+          width: 15px;
+        }
+        &::-webkit-scrollbar-track {
+          background: $backgroundColor;
+        }
+        &::-webkit-scrollbar-thumb {
+          background-color: $backgroundColor;
+          border: 3px solid $primaryColor;
+          -webkit-box-shadow: inset 0 0 5px $primaryColor;
+          box-shadow: inset 0 0 5px $primaryColor;
+        }
+        border: solid 3px $primaryColor;
+        background-color: $backgroundColor;
+        transition: all 70ms 50ms linear;
+        &__unique {
+          width: 15%;
+          margin: 10px;
+          border: solid 2px $primaryColor;
+          overflow: hidden;
+          transition: box-shadow 100ms ease-in-out;
+          &:hover {
+            cursor: pointer;
+            box-shadow: 0px 0px 10px 2px $primaryColor;
+            img {
+              transform: scale(1.2);
+            }
+          }
+          img {
+            width: 100%;
+            transform: scale(1);
+            transform-origin: top;
+            transition: all 400ms ease-in-out;
+          }
         }
       }
     }
