Advanced on search page. Search query functionnal.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
       <li class="navmenu__list__unique__big" (click)="onDiscover()">
         <i class="fa-solid fa-circle-question"></i>
       </li>
-      <li class="navmenu__list__unique__big">
+      <li class="navmenu__list__unique__big" (click)="onSearch()">
         <i class="fa-solid fa-magnifying-glass"></i>
       </li>
       <li class="navmenu__list__unique">
