--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -33,7 +33,7 @@
 
   <!-- Featuring trending movies -->
   <div class="home__trending">
-    <h3>TRENDING MOVIES</h3>
+    <h3>TENDANCE FILMS</h3>
     <div
       class="home__trending__content"
       *ngIf="trendingMovies$ | async as trending"
@@ -59,7 +59,7 @@
       <div class="home__trending__content__bar"></div>
     </div>
 
-    <h3>TRENDING PEOPLE</h3>
+    <h3>TENDANCE PERSONNALITE</h3>
     <div
       class="home__trending__content"
       *ngIf="trendingPeople$ | async as trending"
