--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -2,7 +2,7 @@
 
 .home {
   width: 100%;
-  padding: 150px 0;
+  padding: 10% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -65,6 +65,7 @@
       margin-top: 30px;
       margin-bottom: 50px;
       &__unique {
+        position: relative;
         i {
           font-size: 48px;
           display: flex;
