SearchPage 100%. Full app 95% to V1.0. Still to setup contact page.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -75,7 +75,11 @@
             (click)="onGetPeople(people.id)"
           >
             <img
-              [src]="posterUrl + people.profile_path"
+              [src]="
+                people.profile_path
+                  ? posterUrl + people.profile_path
+                  : '../assets/default_profile.png'
+              "
               class="home__trending__content__list__unique__poster__image"
               [title]="people.name"
             />
