--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -105,7 +105,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    &__movies {
+    &__movies,
+    &__people {
       width: 85%;
       display: flex;
       flex-direction: column;
@@ -129,15 +130,22 @@
           &:hover {
             cursor: pointer;
             background-color: $backgroundColor;
-            p {
+            p,
+            p:last-child {
               color: $primaryColor;
             }
             img {
               transform: scale(1.25);
             }
+            .search__results__people__list__unique__title__movies {
+              transform: translateX(0%);
+              img {
+                transform: scale(1);
+              }
+            }
           }
           &__poster {
-            width: 20%;
+            width: 10%;
             border-right: 10px solid $backgroundColor;
             overflow: hidden;
             display: flex;
@@ -153,29 +161,99 @@
             }
           }
           &__title {
-            width: 80%;
-
+            width: 90%;
+            max-width: 90%;
             color: $backgroundColor;
             display: flex;
-            flex-direction: column;
-            justify-content: space-around;
+            flex-direction: row;
+            justify-content: space-between;
             align-items: center;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
             padding: 0 1em;
+            overflow: hidden;
             p {
-              width: 100%;
-              font-size: 42px;
+              width: 85%;
+              font-size: 36px;
               font-weight: 800;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
             }
             p:last-child {
+              width: 15%;
               margin: 1em 0;
-              font-size: 36px;
+              font-size: 32px;
               font-weight: 700;
               color: $backgroundColor;
               text-align: center;
             }
+            &__movies {
+              width: 30%;
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              align-items: center;
+              transition: all 250ms ease-in-out;
+              transform: translateX(120%);
+              &__unique {
+                width: 30%;
+                img {
+                  width: 100%;
+                  transform: scale(1);
+                  transition: all 250ms ease-in-out;
+                  overflow: hidden;
+                }
+              }
+            }
+          }
+        }
+      }
+      &__pageNav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        &__prev,
+        &__next,
+        &__start,
+        &__end {
+          margin: 1em 2em;
+          font-size: 26px;
+          font-weight: 500;
+          transform: scale(1);
+          transition: all 75ms linear;
+          position: relative;
+          i {
+            transform: scale(1);
+            transition: all 75ms linear;
+          }
+          &:hover {
+            cursor: pointer;
+            text-shadow: 0 0 20px $primaryColor, 0 0 3px $secondaryColor;
+            transform: scale(1.1);
+            i {
+              transform: scale(1.1);
+            }
+            &::before {
+              opacity: 1;
+            }
+          }
+          &::before {
+            pointer-events: none;
+            content: "";
+            position: absolute;
+            top: 140%;
+            left: 0;
+            width: 100%;
+            height: 40%;
+            transition: all 75ms linear;
+            opacity: 0;
+            background: linear-gradient(
+              0deg,
+              $primaryColor 50%,
+              $secondaryColor 100%
+            );
+            transform: perspective(2em) rotateX(40deg) scale(0.7, 0.4);
+            filter: blur(1.5em);
           }
         }
       }
