--- a/src/app/view-image/view-image.component.html
+++ b/src/app/view-image/view-image.component.html
@@ -1,5 +1,5 @@
 <div class="fullImage">
-  <div class="fullImage__buttons" *ngIf="uniqueMovie$ | async as movie">
+  <div class="fullImage__buttons">
     <button class="fullImage__buttons__unique" (click)="downloadPoster()">
       <i class="fa-solid fa-file-arrow-down"></i>Télécharger
     </button>
