--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -105,6 +105,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    &__none {
+      color: $primaryColor;
+      font-size: 42px;
+      font-weight: 800;
+      text-align: center;
+    }
     &__movies,
     &__people {
       width: 85%;
