Started contact page. Still to build the form.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
       <li class="navmenu__list__unique__big" (click)="onSearch()">
         <i class="fa-solid fa-magnifying-glass"></i>
       </li>
-      <li class="navmenu__list__unique">
+      <li class="navmenu__list__unique" (click)="onContact()">
         <i class="fa-solid fa-envelope"></i>CONTACT
       </li>
     </ul>
