Full site OK, V0.99. Replaced contact form with contact links. Still to handle responsive to V1.

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,12 +1,39 @@
 <div class="contact">
-  <div class="contact__block">
+  <div class="contact__message">
     <h2>CONTACT</h2>
     <p>
       Pour me faire part d'une remarque, une critique, une suggestion, ou tout
       simplement m'envoyer un petit merci ou un encouragement, n'hésitez pas à
-      me contacter via le formulaire ci-dessous. Je tâcherai de vous répondre au
+      me contacter via un des liens ci-dessous. Je tâcherai de vous répondre au
       plus vite. <br />Merci de votre visite et à bientôt sur
-      <strong>SCREENLOVERS</strong>.
+      <strong (click)="onHome()">SCREENLOVERS</strong>.
     </p>
+  </div>
+  <div class="contact__links">
+    <div class="contact__links__unique">
+      <i class="fa-solid fa-envelope"></i
+      ><a
+        href="mailto:contact.screenlovers@gmail.com?subject=Contact admin screenlovers"
+        >contact.screenlovers@gmail.com</a
+      >
+    </div>
+    <div class="contact__links__unique">
+      <i class="fa-brands fa-github"></i
+      ><a href="https://github.com/Sym3ioZ" target="_blank">Github - Sym3ioZ</a>
+    </div>
+    <div class="contact__links__unique">
+      <i class="fa-brands fa-twitter"></i
+      ><a href="https://twitter.com/BTortevois" target="_blank"
+        >Twitter - Benoit TORTEVOIS</a
+      >
+    </div>
+    <div class="contact__links__unique">
+      <i class="fa-brands fa-facebook"></i
+      ><a
+        href="https://www.facebook.com/profile.php?id=100089620328247"
+        target="_blank"
+        >Facebook - Screenlovers</a
+      >
+    </div>
   </div>
 </div>
