--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
   <nav class="navmenu">
     <ul class="navmenu__list">
-      <li class="navmenu__list__unique">© - BT Design</li>
-      <li class="navmenu__list__unique">12 - 2022</li>
+      <li class="navmenu__list__unique">© - Sym3ioZ prods.</li>
+      <li class="navmenu__list__unique">01 - 2023</li>
       <li class="navmenu__list__unique">
         Powered by:&nbsp;
         <a href="https://themoviedb.org" target="_blank"
