--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -2,7 +2,7 @@
 
 .landing-page {
   width: 100%;
-  padding-top: 200px;
+  padding: 10% 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
