--- a/src/app/single-people/single-people.component.html
+++ b/src/app/single-people/single-people.component.html
@@ -87,5 +87,15 @@
         </div>
       </div>
     </div>
+    <div class="singlePeople__block__tmdbLink">
+      Consulter la fiche
+      <a
+        class="singlePeople__block__tmdbLink__logo"
+        [href]="'https://www.themoviedb.org/person/' + people.id"
+        target="_blank"
+      >
+        <img src="../../assets/logo_tmdb.svg" alt="tmdb logo" />
+      </a>
+    </div>
   </div>
 </div>
