--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  &__block {
+  &__message {
     width: 95%;
     display: flex;
     flex-direction: column;
@@ -18,12 +18,77 @@
       font-weight: 800;
       text-align: center;
       text-decoration: underline;
+      margin-bottom: 0.5em;
     }
     p {
       font-size: 22px;
       font-weight: 500;
       color: white;
       text-align: justify;
+      strong {
+        &:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  &__links {
+    margin-top: 1em;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    &__unique {
+      margin-top: 2em;
+      width: fit-content;
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      align-items: center;
+      gap: 2.5em;
+      i {
+        color: $primaryColor;
+        font-size: 48px;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+        font-size: 24px;
+        position: relative;
+        transition: all 100ms;
+        transform: scale(1);
+        &::before {
+          pointer-events: none;
+          content: "";
+          position: absolute;
+          top: 130%;
+          left: 0;
+          width: 100%;
+          height: 50%;
+          transition: all 100ms linear;
+          opacity: 0;
+          background: linear-gradient(
+            0deg,
+            $primaryColor 50%,
+            $secondaryColor 100%
+          );
+          transform: perspective(2em) rotateX(40deg) scale(0.7, 0.4);
+          filter: blur(1.5em);
+        }
+      }
+      &:hover {
+        cursor: pointer;
+        a {
+          color: $primaryColor;
+          text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
+          transform: scale(1.05);
+          &::before {
+            opacity: 1;
+          }
+        }
+      }
     }
   }
 }
