--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -43,7 +43,7 @@ footer {
         background-color: $backgroundColorA;
         border-radius: 20px;
         width: 25%;
-        padding: 1% 2%;
+        padding: 0 2%;
         display: flex;
         flex-direction: row;
         justify-content: center;
