--- a/src/app/single-movie/single-movie.component.html
+++ b/src/app/single-movie/single-movie.component.html
@@ -348,4 +348,14 @@
       </div>
     </div>
   </div>
+  <div class="singleMovie__tmdbLink">
+    Consulter la fiche
+    <a
+      class="singleMovie__tmdbLink__logo"
+      [href]="'https://www.themoviedb.org/movie/' + movie.id"
+      target="_blank"
+    >
+      <img src="../../assets/logo_tmdb.svg" alt="tmdb logo" />
+    </a>
+  </div>
 </div>
