--- a/src/app/single-people/single-people.component.scss
+++ b/src/app/single-people/single-people.component.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 .singlePeople {
-  padding: 150px 0;
+  padding: 10% 0;
   width: 100%;
   &__block {
     width: 100%;
@@ -161,6 +161,51 @@
             transform-origin: top;
             transition: all 400ms ease-in-out;
           }
+        }
+      }
+    }
+    &__tmdbLink {
+      margin: 5em 0 -5em 5em;
+      width: 100%;
+      color: white;
+      font-size: 20px;
+      font-weight: 500;
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      align-items: center;
+      &__logo {
+        margin-left: 1em;
+        border-radius: 2em;
+        padding: 0.2em 0.3em;
+        width: 6%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          background-color: transparent;
+          border-radius: 2em;
+          padding: 0.2em 0.3em;
+          transform: scale(0);
+          transition: all 150ms ease-in-out;
+          z-index: -1;
+        }
+        &:hover {
+          cursor: pointer;
+          &::before {
+            transform: scale(1);
+            background-color: $primaryColor;
+            box-shadow: 0px 0px 5px 1px $primaryColor;
+          }
+        }
+        img {
+          width: 100%;
         }
       }
     }
