--- a/src/app/view-image/view-image.component.scss
+++ b/src/app/view-image/view-image.component.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin-top: 200px;
+  padding: 10% 0;
   &__buttons {
     align-self: flex-start;
     margin-top: 10%;
