--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <img
       class="logo__image"
       src="../../assets/logo_screenlovers.png"
-      alt="clapperboard logo"
+      alt="screenlovers logo"
     />
     <h2>(Re)découvrez le cinéma</h2>
   </div>
