--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -59,7 +59,7 @@
       <div class="home__trending__content__bar"></div>
     </div>
 
-    <h3>TENDANCE PERSONNALITE</h3>
+    <h3>TENDANCE PERSONNALITES</h3>
     <div
       class="home__trending__content"
       *ngIf="trendingPeople$ | async as trending"
