--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,9 +1,14 @@
-<div class="loading" #loading>
+<div class="loading">
+  <div class="neon">
+    <div class="neon__logo">
+      <img src="../../assets/logo_screenlovers.png" />
+    </div>
+  </div>
   <div class="loader">
     <div class="loader__holes"></div>
     <div class="loader__holes"></div>
     <div class="loader__holes"></div>
     <div class="loader__holes"></div>
+    <div class="centerhole"></div>
   </div>
-  <div class="centerhole"></div>
 </div>
