--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -16,7 +16,7 @@
   flex-direction: column;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: baseline;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -27,21 +27,31 @@
   animation: fadeLoader 2000ms 3000ms 1 linear both;
 }
 
-.centerhole {
-  width: 30px;
-  height: 30px;
-  background-color: $backgroundColor;
+.neon {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
   position: absolute;
-  margin: -15px 0 0 -15px;
-  top: 50%;
-  left: 50%;
-  border-radius: 50%;
+  top: 0;
+  left: 0;
+  &__logo {
+    width: 33%;
+    opacity: 0;
+    animation: neonStart 2500ms linear 1 both;
+    img {
+      width: 100%;
+    }
+  }
 }
+
 .loader {
   width: 400px;
   height: 400px;
   background-color: $primaryColor;
   border-radius: 50%;
+  margin-top: 10%;
   position: relative;
   -webkit-transform: rotate(0);
   -ms-transform: rotate(0);
@@ -80,9 +90,19 @@
       bottom: 20px;
       left: 160px;
     }
-    &:last-child {
+    &:nth-child(4) {
       left: 20px;
       top: 160px;
     }
+  }
+  .centerhole {
+    width: 30px;
+    height: 30px;
+    background-color: $backgroundColor;
+    position: absolute;
+    margin: -15px 0 0 -15px;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
   }
 }
